feat: add solutions to lc problems: No.2475~2477