@@ -19,27 +19,16 @@ class Solution {
     public List<List<Integer>> closestNodes(TreeNode root, List<Integer> queries) {
         dfs(root);
         List<List<Integer>> ans = new ArrayList<>();
-        for (int v : queries) {
-            int i = search(v + 1) - 1;
-            int j = search(v);
+        for (int x : queries) {
+            int i = Collections.binarySearch(nums, x + 1);
+            int j = Collections.binarySearch(nums, x);
+            i = i < 0 ? - i - 2 : i - 1;
+            j = j < 0 ? -j - 1 : j;
             int mi = i >= 0 && i < nums.size() ? nums.get(i) : -1;
             int mx = j >= 0 && j < nums.size() ? nums.get(j) : -1;
-            ans.add(Arrays.asList(mi, mx));
+            ans.add(List.of(mi, mx));
         }
         return ans;
-    }
-
-    private int search(int x) {
-        int left = 0, right = nums.size();
-        while (left < right) {
-            int mid = (left + right) >> 1;
-            if (nums.get(mid) >= x) {
-                right = mid;
-            } else {
-                left = mid + 1;
-            }
-        }
-        return left;
     }
 
     private void dfs(TreeNode root) {
